--- a/Dynamic_Cards_in_JS.html
+++ b/Dynamic_Cards_in_JS.html
@@ -13,7 +13,7 @@
         section{
             display:flex;
             flex-wrap: wrap;
-            /* justify-content: center; */
+            justify-content: center;
         }
         section figure{
             /* flex:unset; */
